# POS_System_For_all_businesses

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  ROUTE_COVERAGE.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/versions/: 445699a818db_phase2_products_inventory_suppliers.py  684f62e12684_initial_schema.py  79ffbfd7de44_merge_plan_seed_and_fk_ondelete_.py  8e678037b59a_global_product_catalog.py  a7c4e2f8b157_phase7_procurement.py  a8b9c0d1e2f3_fix_fk_ondelete_restrict.py  b1e9f3c2a8d4_phase25_hardening.py  b8d5e3f9c072_phase8_subscriptions.py  c1d2e3f4a5b6_bootstrap_free_trial_plan.py  c9d3e5f7a841_phase9_entitlements.py  d0e6f2a3b485_phase10_notifications.py  d4e7f1a2b963_phase3_sales_engine.py  e1f7a9c3b286_phase_f10_registration.py  e5f8a3b1c920_phase4_offline_sync.py  f1a2b3c4d5e6_f10_hardening.py  f6a9c2e8b451_phase5_customers.py  g2h5k8m1n3p6_business_code.py  h3i7j2k9l1m4_phase11_referral_commission_wallet.py  i4j8k2l6m9n3_performance_indexes.py  k7l1m5n9o3p7_sync_tenant_contact_from_owner.py  p1r2o3m4o5_add_referral_plan_and_simplify_resellers.py  q2s3t4u5v6_drop_campaign_tables.py  x5y6z7a8b9c0_rename_free_to_free_trial.py
backend/app/: main.py
backend/app/analytics/: dashboard_service.py  export_service.py  repositories.py  routes.py
backend/app/api/: deps.py
backend/app/cashiers/: models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/core/: cache.py  config.py  constants.py  exceptions.py  rate_limit.py  (+3 more)
backend/scripts/: benchmark.py  create_super_admin.py  seed.py
(+526 files in other folders)
