[tool.poetry]
name = "pos-saas-backend"
version = "1.0.0"
description = "Enterprise Multi-Tenant POS SaaS Backend"
authors = ["POS SaaS Team"]
python = "^3.13"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"
redis = {extras = ["asyncio"], version = "^5.2.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
httpx = "^0.27.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
orjson = "^3.10.11"
email-validator = "^2.2.0"
phonenumbers = "^8.13.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
black = "^24.10.0"
isort = "^5.13.0"
mypy = "^1.13.0"
ruff = "^0.7.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
